--- a/manga.site-geniusss/css/style.css
+++ b/manga.site-geniusss/css/style.css
@@ -64,18 +64,312 @@ body {
     background-color: black;
     border: 1px solid black;
     width: 270px;
-    height: 330px;
+    height: 380px;
     position: absolute;
     top: 200px;
     left: 20px;
+
 }
 .anime-ramka-bleach-text{
     position: absolute;
     width: 225px;
     height: 100px;
     border-radius: 16px;
-    top: 210px;
+    top: 270px;
     left: 20px;
     border: 1px solid rgb(246, 246, 246);
     background-color: rgb(248, 246, 246);
+}
+.berserk{
+    position: absolute;
+    left: 300px;
+}
+.anime-ramka-berserk{
+    border-radius: 16px;
+    background-color: black;
+    border: 1px solid black;
+    width: 270px;
+    height: 380px;
+    position: absolute;
+    top: 200px;
+    left: 20px;
+
+}
+.anime-ramka-berserk-text{
+    position: absolute;
+    width: 225px;
+    height: 100px;
+    border-radius: 16px;
+    top: 270px;
+    left: 20px;
+    border: 1px solid rgb(246, 246, 246);
+    background-color: rgb(248, 246, 246);
+}
+.eva{
+    position: absolute;
+    left: 600px;
+}
+.anime-ramka-eva{
+    border-radius: 16px;
+    background-color: black;
+    border: 1px solid black;
+    width: 270px;
+    height: 380px;
+    position: absolute;
+    top: 200px;
+    left: 20px;
+
+}
+.anime-ramka-eva-text{
+    position: absolute;
+    width: 225px;
+    height: 100px;
+    border-radius: 16px;
+    top: 270px;
+    left: 20px;
+    border: 1px solid rgb(246, 246, 246);
+    background-color: rgb(248, 246, 246);
+}
+.berserk-img-menu{
+    position: absolute; 
+    left: 13px; 
+    width: 245px; 
+    height: 260px;
+}
+.eva-img-menu{
+    position: absolute; 
+    left: 13px; 
+    width: 245px; 
+    height: 260px;
+}
+.bleach-img-menu{
+    position: absolute; 
+    left: 13px; 
+    width: 245px; 
+    height: 260px;
+}
+@media screen and (max-width: 968px) {
+    .navbar{
+        max-width: 100%;
+    }
+    .ad{
+        animation-timing-function: linear;
+        animation-name: sss;
+        animation-duration: 12s;
+        animation-iteration-count: infinite;
+    
+        position: fixed;
+        top: 50px;
+    } 
+    @keyframes sss {
+        0% {left: 0;}
+        50% {left: 695px;}
+        100% {left: 0;}
+}
+}
+@media screen and (max-width: 767px) {
+    .bleach{
+        .bleach-img-menu{
+            width: 200px;
+            height: 200px;
+        }
+        .anime-ramka-bleach{
+            border-radius: 16px;
+            background-color: black;
+            border: 1px solid black;
+            width: 225px;
+            height: 320px;
+            position: absolute;
+            top: 200px;
+            left: 20px;
+        
+        }
+        .anime-ramka-bleach-text{
+            position: absolute;
+            width: 183px;
+            height: 100px;
+            border-radius: 16px;
+            top: 210px;
+            left: 20px;
+            border: 1px solid rgb(246, 246, 246);
+            background-color: rgb(248, 246, 246);
+        } 
+    }
+    .berserk{
+        left: 240px;
+        .berserk-img-menu{
+            width: 200px;
+            height: 200px;
+            position: absolute;
+        }
+        .anime-ramka-berserk{
+            border-radius: 16px;
+            background-color: black;
+            border: 1px solid black;
+            width: 225px;
+            height: 320px;
+            position: absolute;
+            top: 200px;
+            left: 20px;
+        
+        }
+        .anime-ramka-berserk-text{
+            position: absolute;
+            width: 183px;
+            height: 100px;
+            border-radius: 16px;
+            top: 210px;
+            left: 20px;
+            border: 1px solid rgb(246, 246, 246);
+            background-color: rgb(248, 246, 246);
+        } 
+    }
+    .eva{
+        left: 480px;
+        .eva-img-menu{
+            width: 200px;
+            height: 200px;
+        }
+        .anime-ramka-eva{
+            border-radius: 16px;
+            background-color: black;
+            border: 1px solid black;
+            width: 225px;
+            height: 320px;
+            position: absolute;
+            top: 200px;
+            left: 20px;
+        
+        }
+        .anime-ramka-eva-text{
+            position: absolute;
+            width: 183px;
+            height: 100px;
+            border-radius: 16px;
+            top: 210px;
+            left: 20px;
+            border: 1px solid rgb(246, 246, 246);
+            background-color: rgb(248, 246, 246);
+        } 
+    }
+    .top-manga{
+        position: absolute;
+        left: 170px;
+    }
+    .navbar{
+        max-width: 100%;
+    .search{
+        position: fixed;
+        left: 500px;
+        width: 190px;
+    }
+    .top-manga{
+        position: fixed;
+        left: 160px;
+    }
+    }
+    .ad{
+        animation-timing-function: linear;
+        animation-name: sss;
+        animation-duration: 16s;
+        animation-iteration-count: infinite;
+    
+        position: fixed;
+        top: 50px;
+    } 
+    @keyframes sss {
+        0% {left: 0;}
+        50% {left: 555px;}
+        100% {left: 0;}
+}
+}
+@media screen and (max-width:320px) {
+    .bleach{
+        .bleach-img-menu{
+            width: 200px;
+            height: 200px;
+        }
+        .anime-ramka-bleach{
+            border-radius: 16px;
+            background-color: black;
+            border: 1px solid black;
+            width: 225px;
+            height: 320px;
+            position: absolute;
+            top: 200px;
+            left: 20px;
+        
+        }
+        .anime-ramka-bleach-text{
+            position: absolute;
+            width: 183px;
+            height: 100px;
+            border-radius: 16px;
+            top: 210px;
+            left: 20px;
+            border: 1px solid rgb(246, 246, 246);
+            background-color: rgb(248, 246, 246);
+        } 
+    }
+    .berserk{
+        left: 240px;
+        .berserk-img-menu{
+            width: 200px;
+            height: 200px;
+            position: absolute;
+        }
+        .anime-ramka-berserk{
+            border-radius: 16px;
+            background-color: black;
+            border: 1px solid black;
+            width: 225px;
+            height: 320px;
+            position: absolute;
+            top: 200px;
+            left: 20px;
+        
+        }
+        .anime-ramka-berserk-text{
+            position: absolute;
+            width: 183px;
+            height: 100px;
+            border-radius: 16px;
+            top: 210px;
+            left: 20px;
+            border: 1px solid rgb(246, 246, 246);
+            background-color: rgb(248, 246, 246);
+        } 
+    }
+    .eva{
+        left: 480px;
+        .eva-img-menu{
+            width: 200px;
+            height: 200px;
+        }
+        .anime-ramka-eva{
+            border-radius: 16px;
+            background-color: black;
+            border: 1px solid black;
+            width: 225px;
+            height: 320px;
+            position: absolute;
+            top: 200px;
+            left: 20px;
+        
+        }
+        .anime-ramka-eva-text{
+            position: absolute;
+            width: 183px;
+            height: 100px;
+            border-radius: 16px;
+            top: 210px;
+            left: 20px;
+            border: 1px solid rgb(246, 246, 246);
+            background-color: rgb(248, 246, 246);
+        } 
+    }
+    .top-manga{
+        position: absolute;
+        left: 170px;
+    }
 }
